2013-09-06  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Extend the single-byte algorithm to all devices, both flash and
	EEPROM.  (Flash cells must have been erased before though.)
	* jtag3.c (jtag3_initialize): OCDEN no longer needs to be
	considered; a session with "programming" purpose is sufficient
	* jtag3.c (jtag3_write_byte): Use the paged algorithm for all
	flash and EEPROM areas, not just Xmega.

2013-09-05  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Fix single-byte EEPROM updates on Xmega:
	* jtag3_private.h (MTYPE_EEPROM_XMEGA): New define.
	* jtag3.c (jtag3_write_byte): When updating flash or
	EEPROM on Xmega devices, resort to jtag3_paged_write()
	after filling and modifying the page cache.
	* jtag3.c (jtag3_paged_write): use MTYPE_EEPROM_XMEGA
	where appropriate.
	* jtag3.c (jtag3_initialize): Open with debugging intent
	for Xmega devices, so single-byte EEPROM updates will
	work.

2013-09-04  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Matthias Neeracher:
	bug #38732: Support for ATtiny1634
	* avrdude.conf.in (ATtiny1634): New entry.

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Brane Ždralo:
	patch #7769: Write flash fails for AVR910 programmers
	* avr910.c (avr910_paged_write): Fix flash addresses in
	'A' command.

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Fred (magister):
	bug #38951: AVR109 use byte offset instead of word offset
	patch #8045: AVR109 butterfly failing
	* butterfly.c (butterfly_paged_load, butterfly_paged_write):
	fix calculation of 'A' address when operating on flash memory.
	It must be given in terms of 16-bit words rather than bytes.

2013-09-03  Rene Liebscher <R.Liebscher@gmx.de>

	* avrftdi.c, avrftdi_private.h: added tx buffer size, and use
	smaller block sizes as larger sometimes hang

2013-09-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* avrdude.h: Remove the erase cycle counter (options -y / -Y).
	* avr.c: (Dito.)
	* main.c: (Dito.)
	* avrdude.1: Undocument -y / -Y.